[gd_scene load_steps=5 format=3 uid="uid://dblov20n4ihk2"]

[ext_resource type="Script" path="res://cockpit_test/arm_base.gd" id="1_tk250"]
[ext_resource type="PackedScene" uid="uid://bg8wacgshd3r1" path="res://cockpit_test/mech_arm_temp.tscn" id="2_3eeh4"]
[ext_resource type="PackedScene" uid="uid://clqdxr8l7x1fu" path="res://cockpit_test/arm_target.tscn" id="3_pnddb"]

[sub_resource type="PrismMesh" id="PrismMesh_bcxlx"]

[node name="ArmBase" type="Node3D"]
script = ExtResource("1_tk250")
scaling = 16.0

[node name="ShoulderJoint" type="Node3D" parent="."]

[node name="arm" parent="ShoulderJoint" instance=ExtResource("2_3eeh4")]
transform = Transform3D(-8, 0, -6.99382e-07, 0, 8, 0, 6.99382e-07, 0, -8, 0.00957441, 0.0413374, -12.7886)

[node name="Cube" parent="ShoulderJoint/arm/Armature/Skeleton3D/Cube" index="0"]
transform = Transform3D(1, -6.29423e-25, 2.64698e-23, -6.92391e-24, 1, 0, 1.32349e-23, 0, 1, 0, 0, 0)

[node name="SkeletonIK3D" parent="ShoulderJoint/arm/Armature/Skeleton3D" index="5"]
target_node = NodePath("../../../../../ArmTarget")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ShoulderJoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.529284, 0)
mesh = SubResource("PrismMesh_bcxlx")

[node name="ArmTarget" parent="." node_paths=PackedStringArray("target_node") instance=ExtResource("3_pnddb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.07456)
target_node = NodePath("../InitialTarget")

[node name="InitialTarget" type="Node3D" parent="."]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0076685, 2.36722, -0.00635481)
text = "asdf"

[editable path="ShoulderJoint/arm"]
